--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,18 @@
 {
-  "name": "AWS Infra",
-  "dockerComposeFile": "./compose.yml",
-  "service": "app",
-  "workspaceFolder": "/home/user/app",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-azuretools.vscode-docker",
-        "GitHub.copilot",
-        "oderwat.indent-rainbow",
-        "amazonwebservices.aws-toolkit-vscode"
-      ]
-    }
-  }
+	"name": "AWS Infra",
+	"dockerComposeFile": "./compose.yml",
+	"service": "app",
+	"workspaceFolder": "/home/user/app",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-azuretools.vscode-docker",
+				"GitHub.copilot",
+				"oderwat.indent-rainbow",
+				"amazonwebservices.aws-toolkit-vscode",
+				"hashicorp.terraform",
+				"biomejs.biome"
+			]
+		}
+	}
 }
